--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+
+/// Reset
+
+* {
+    box-sizing  : border-box;
+    border      : 0;
+    margin      : 0;
+    padding     : 0;
+    font-family : monospace;
+}
+
+body {
+    font-size   : 14px;
+    line-height : 18px;
+}
+
+
+/// full height
+
+html, body {
+    min-height : 100vh;
+    height     : auto;
+    margin     : 0;
+}
+
+
+// custom styling
+
+button {
+    padding          : 1rem;
+    background-color : cornflowerblue;
+    color            : white;
+    cursor           : pointer;
+    border-radius    : 4px;
+
+    &:hover {
+        background-color : #375fa6;
+    }
+}
