--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,1 +1,3 @@
 <p>homepage works!</p>
+<button (click)="bootStore.setToReady()">blah</button>
+<pre><code>{{ configStore.config | json}}</code></pre>
