--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,19 +1,20 @@
-<div class="container">
+<div class="container" *mobxAutorun>
     <div class="nav">
         <a routerLink="/">Home</a>
         <a routerLink="/new-entry">New Entry</a>
         <a routerLink="/all-entries">All Entries</a>
     </div>
-    <div class="user" *ngIf="isBusy">
+    {{bootStore.isBusy | json}}
+    <div class="user" *ngIf="!bootStore.isReady">
         ...
     </div>
-    <div class="user" *ngIf="!isBusy">
-      <div *ngIf="isLoggedIn && user">
-          {{user.firstname}} {{user.lastname}} |
-          <button (click)="logOut()">Logout</button>
-      </div>
-      <div *ngIf="!isLoggedIn">
-          <button>Login</button>
-      </div>
+    <div class="user" *ngIf="bootStore.isReady">
+        <div *ngIf="isLoggedIn && user">
+            {{user.firstname}} {{user.lastname}} |
+            <button (click)="logOut()">Logout</button>
+        </div>
+        <div *ngIf="!isLoggedIn">
+            <button>Login</button>
+        </div>
     </div>
 </div>
