--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,4 +1,17 @@
 .foot {
     background-color : lightgrey;
     padding          : 1rem;
+    display          : flex;
+    justify-content  : space-between;
+    align-items      : center;
+}
+
+
+.lang {
+    display : flex;
+
+
+    button {
+       margin-left : 1rem;
+    }
 }
