--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,13 +8,9 @@
     margin      : 0;
     padding     : 0;
     font-family : monospace;
-}
-
-body {
     font-size   : 14px;
     line-height : 18px;
 }
-
 
 /// full height
 
@@ -27,16 +23,28 @@ html, body {
 
 // custom styling
 
+h1 {
+    font-size   : 32px;
+    line-height : 36px;
+}
+
 button {
     padding          : 0.75rem 1rem;
-    background-color : cornflowerblue;
+    background-color : #2669e0;
     color            : white;
     cursor           : pointer;
     border-radius    : 4px;
 
     &:hover {
-        background-color : #375fa6;
+        background-color : #0944b2;
     }
+
+    &:disabled,
+    &[disabled] {
+        background-color : #666666;
+        cursor           : not-allowed;
+    }
+
 }
 
 label {
