--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,20 +1,24 @@
-<div class="login">
+<form [formGroup]="form" class="login">
 
     <h1>{{ 'pages.login.title' | translate }}</h1>
     <p>{{ 'pages.login.text' | translate }}</p>
 
-    <div>
-        <label for="name">{{ 'pages.login.fieldName' | translate }}</label>
-        <input id="name" type="text" [formControl]="name">
+    <div class="error" *ngIf="form.invalid">
+        {{ 'errors.form.' + form.status | translate }}
     </div>
     <div>
-        <label for="pw">{{ 'pages.login.fieldPassword' | translate }}</label>
-        <input id="pw" type="text" [formControl]="pw">
+        <label for="username">{{ 'pages.login.fieldName' | translate }}</label>
+        <input id="username" type="text" formControlName="username">
     </div>
     <div>
-        <button [disabled]="isLoginButtonDisabled" (click)="logIn($event)">
+        <label for="password">{{ 'pages.login.fieldPassword' | translate }}</label>
+        <input id="password" type="text" formControlName="password">
+    </div>
+    <div>
+        <button [disabled]="form.invalid || isBusy" (click)="logIn($event)">
             <span *ngIf="isBusy">...</span>
             <span *ngIf="!isBusy">{{ 'pages.login.button' | translate }}</span>
         </button>
     </div>
-</div>
+
+</form>
