--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -10,3 +10,15 @@
     }
 
 }
+
+.error {
+    color            : #8f0303;
+    background-color : #fddfdf;
+    font-size        : 12px;
+    line-height      : 14px;
+    border-radius    : 4px;
+
+    padding          : 1rem;
+
+    border           : 1px solid #8f0303;
+}
